// Copyright 2022 Prysmatic Labs.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package theqrl.zond.v1alpha1;

import "proto/zond/ext/options.proto";

option csharp_namespace = "TheQRL.Zond.v1alpha1";
option go_package = "github.com/theQRL/qrysm/v4/proto/prysm/v1alpha1;zond";
option java_multiple_files = true;
option java_outer_classname = "BlobsProto";
option java_package = "org.theqrl.zond.v1alpha1";
option php_namespace = "TheQRL\\Zond\\v1alpha1";

message BlobSidecars {
  repeated BlobSidecar sidecars = 1;
}

message BlobSidecar {
  bytes block_root = 1 [(theqrl.zond.ext.ssz_size) = "32"];
  uint64 index = 2;
  uint64 slot = 3 [(theqrl.zond.ext.cast_type) = "github.com/theQRL/qrysm/v4/consensus-types/primitives.Slot"];
  bytes block_parent_root = 4 [(theqrl.zond.ext.ssz_size) = "32"];
  uint64 proposer_index = 5 [(theqrl.zond.ext.cast_type) = "github.com/theQRL/qrysm/v4/consensus-types/primitives.ValidatorIndex"];
  bytes blob = 6 [(theqrl.zond.ext.ssz_size) = "blob.size"];
  bytes kzg_commitment = 7 [(theqrl.zond.ext.ssz_size) = "48"];
  bytes kzg_proof = 8 [(theqrl.zond.ext.ssz_size) = "48"];
}

message SignedBlobSidecar {
  BlobSidecar message = 1;
  bytes signature = 2 [(theqrl.zond.ext.ssz_size) = "4595"];
}

message BlindedBlobSidecars {
  repeated BlindedBlobSidecar sidecars = 1 [(theqrl.zond.ext.ssz_max) = "max_blobs_per_block.size"];
}

message BlindedBlobSidecar {
  bytes block_root = 1 [(theqrl.zond.ext.ssz_size) = "32"];
  uint64 index = 2;
  uint64 slot = 3 [(theqrl.zond.ext.cast_type) = "github.com/theQRL/qrysm/v4/consensus-types/primitives.Slot"];
  bytes block_parent_root = 4 [(theqrl.zond.ext.ssz_size) = "32"];
  uint64 proposer_index = 5 [(theqrl.zond.ext.cast_type) = "github.com/theQRL/qrysm/v4/consensus-types/primitives.ValidatorIndex"];
  bytes blob_root = 6 [(theqrl.zond.ext.ssz_size) = "32"];
  bytes kzg_commitment = 7 [(theqrl.zond.ext.ssz_size) = "48"];
  bytes kzg_proof = 8 [(theqrl.zond.ext.ssz_size) = "48"];
}

message SignedBlindedBlobSidecar {
  BlindedBlobSidecar message = 1;
  bytes signature = 2 [(theqrl.zond.ext.ssz_size) = "96"];
}

message BlobIdentifier {
  bytes block_root = 1 [(theqrl.zond.ext.ssz_size) = "32"];
  uint64 index = 2;
}